changed image file names in HTML

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <h3>Connect with Me!</h3>
             <hr>
             <nav>
-                <a href="https://github.com/bgbshear"><img src="/assets/git Small.jpeg" width="30" alt="GitHub Logo"></a>
-                <a href="https://www.linkedin.com/in/brittanyshear/"><img src="/assets/linkedin Small.jpeg" width="30" alt="LinkedIn Logo"></a>
-                <a href="https://stackoverflow.com/users/23384759/brittany-shear"><img src="/assets/soverflow Small.jpeg" width="30" alt="StackOverflow Logo"></a>
+                <a href="https://github.com/bgbshear"><img src="/assets/git.jpeg" width="30" alt="GitHub Logo"></a>
+                <a href="https://www.linkedin.com/in/brittanyshear/"><img src="/assets/linkedin.jpeg" width="30" alt="LinkedIn Logo"></a>
+                <a href="https://stackoverflow.com/users/23384759/brittany-shear"><img src="/assets/soverflow.jpeg" width="30" alt="StackOverflow Logo"></a>
             </nav>
         </aside>
     </section>
